MDL-49817 grunt: handle multiple watched files changed at once
Includes multiple changes to the shifter task to simplify and
support this:
* Use grunt.file for shifter yui 'module' detection rather than our own
  70 line function
* Use grunt.util.spawn rather than our own exec for shifter
* Improve behaviour on various yui subdirectories

We have to add the 'async' depndency to npm because we are running
multiple async operations in the single task. We use async.eachSeries to
run each shifter job sequentally (else the output would be unreadable
when running async).

We also run shifter in non-recursive mode on the module directory so its
not building everything (thanks to Ryan for pointing this out!)

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "private": true,
     "description": "Moodle",
     "devDependencies": {
+        "async": "^1.5.2",
         "grunt": "0.4.5",
         "grunt-contrib-jshint": "0.11.3",
         "grunt-contrib-less": "1.1.0",
